# MCMPDL

./: .gitmodules  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
include/: modpack.hpp
src/: curseforge_modpack.cpp  main.cpp
